# zynaddsubfx

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  vcpkg.json
src/: CMakeLists.txt  globals.h  launch_zynaddsubfx.bat  main.cpp  vst.def  zynaddsubfx.nsi
src/Effects/: Alienwah.cpp  CMakeLists.txt  Chorus.cpp
src/Input/: CMakeLists.txt  MidiIn.h  WINMidiIn.cpp
src/Misc/: CMakeLists.txt  Master.cpp  Master.h  Util.cpp  Util.h  XMLwrapper.cpp  XMLwrapper.h
src/Output/: CMakeLists.txt  PAaudiooutput.cpp  VSTaudiooutput.cpp  VSTaudiooutput.h
src/Params/: CMakeLists.txt  PADnoteParameters.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/ZynAddSubFX/: CMakeLists.txt  DistrhoPluginInfo.h  ZynAddSubFX-UI.cpp  ZynAddSubFX.cpp
src/Samples/: CMakeLists.txt
src/Seq/: MIDIFile.cpp  Sequencer.cpp
src/Synth/: ADnote.cpp
src/UI/: BankUI.fl  CMakeLists.txt  EnvelopeUI.fl  OscilGenUI.fl  PresetsUI.fl  ResonanceUI.fl
